Fix minor z-index issue

--- a/client/src/components/Header/Header.less
+++ b/client/src/components/Header/Header.less
@@ -13,7 +13,7 @@
   animation-timing-function: ease-in-out;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 999;
   height: @header-height;
   @media screen and (max-width: @breakpoint-mobile) {
     padding: 0.5rem;
